testsuite/parser_tests/fail/functions_err.0.psl
f : int = {};
g : (x + x : int) = {x};
h : (x : 12) = {};
